--- a/index.html
+++ b/index.html
@@ -5,55 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>👀3080 PDF ADMIN</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #e0f2e9, #c4f0d9);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      text-align: center;
-    }
+ <style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
 
-    .logo {
-      width: 120px;
-      height: 120px;
-      margin-bottom: 20px;
-    }
+    /* Royal blue soft gradient */
+    background: linear-gradient(135deg, #dbe6ff, #bcd3ff);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
 
-    h1 {
-      font-size: 36px;
-      color: #0b923f;
-      margin-bottom: 15px;
-    }
+  .logo {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 20px;
+  }
 
-    p {
-      font-size: 18px;
-      color: #17673a;
-      margin-bottom: 30px;
-    }
+  h1 {
+    font-size: 36px;
+    color: #1e3a8a; /* deep royal blue */
+    margin-bottom: 15px;
+    font-weight: 800;
+  }
 
-    .start-btn {
-      background: #0b923f;
-      color: white;
-      padding: 14px 30px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: 0.3s;
-    }
+  p {
+    font-size: 18px;
+    color: #1d4ed8; /* brighter blue */
+    margin-bottom: 30px;
+  }
 
-    .start-btn:hover {
-      background: #158b39;
-      transform: translateY(-3px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-  </style>
+  /* START BUTTON */
+  .start-btn {
+    background: #1e40af;     /* royal blue */
+    color: white;
+    padding: 14px 30px;
+    border-radius: 12px;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+
+  .start-btn:hover {
+    background: #1d4ed8; 
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  }
+</style>
 </head>
 <body>
 
