--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,10 @@
 <!-- Google Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
+<!-- PWA MANIFEST -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#003c94">
+  
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body {
