--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
     transform: translateY(-3px);
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   }
+  
+  link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#003c94">
+<link rel="apple-touch-icon" href="icons/icon-192x192.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 </style>
 </head>
 <body>
